# MapServerConnector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: Configuration.arcgis.cfg  Configuration.arcgis.xml  Configuration.ogc.cfg
scripts/: example-run.sh
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/image-fetcher/: CMakeLists.txt  main.cpp
src/apps/msc-get-info/: CMakeLists.txt  msc-get-info.cpp
src/apps/msc-viewer/: CMakeLists.txt  Options.cpp  Options.hpp  msc-viewer.cpp
src/apps/msc-viewer/gui/: AddServiceWidget.cpp  AddServiceWidget.hpp  MainWindow.cpp  MainWindow.hpp  MapViewerWidget.cpp  MapViewerWidget.hpp  ServiceCreationWidget.cpp  ServiceCreationWidget.hpp  ServiceListWidget.cpp  ServiceListWidget.hpp  ServiceStatusWidget.cpp  ServiceStatusWidget.hpp  ToolbarWidget.cpp  ToolbarWidget.hpp  ViewerStatusWidget.cpp  ViewerStatusWidget.hpp
src/apps/msc-viewer/log/: LogHandler.cpp  LogHandler.hpp
src/apps/msc-viewer/utils/: FilePath.cpp  FilePath.hpp  String_Utilities.cpp  String_Utilities.hpp
src/lib/: CMakeLists.txt  MSC.hpp
src/lib/MSC/: Base_Connector.cpp  Base_Connector.hpp  Capabilities.cpp  Capabilities.hpp  Configuration.cpp  Configuration.hpp  Connection_Generator_Factory.cpp  Connection_Generator_Factory.hpp  Enumerations.cpp  Enumerations.hpp  Geometries.cpp  Geometries.hpp  Initialization.cpp  Initialization.hpp  MapRequest.cpp  MapRequest.hpp  MapServiceConnector.cpp  MapServiceConnector.hpp  MapServiceConnectorFactory.cpp  MapServiceConnectorFactory.hpp  Status.cpp  Status.hpp
src/lib/MSC/esri/: ArcGIS_Connector.cpp  ArcGIS_Connector.hpp
src/lib/MSC/io/: ConfigParser.cpp  ConfigParser.hpp
src/lib/MSC/ogc/: OGC_BoundingBox.cpp  OGC_BoundingBox.hpp  OGC_Capabilities.cpp  OGC_Capabilities.hpp  OGC_Connector.cpp  OGC_Connector.hpp  OGC_Enumerations.cpp  OGC_Enumerations.hpp  OGC_Layer.cpp  OGC_Layer.hpp  OGC_XML_Utilities.cpp  OGC_XML_Utilities.hpp
src/lib/MSC/utilities/: GDAL_Utilities.cpp  GDAL_Utilities.hpp  Log_Utilities.cpp  Log_Utilities.hpp
src/test/: CMakeLists.txt  TEST_Configuration.cpp  TEST_Connection_Generator_Factory.cpp  TEST_Initialization.cpp  unit-test-main.cpp
src/test/data/: getcapabilities_wms_1_3_0.xml
src/test/ogc/: TEST_OGC_Capabilities.cpp
