#    File:    CMakeLists.txt
#    Author:  Marvin Smith
#    Date:    1/27/2016
#
#    Purpose: Construct MapServiceConnector Test Applications
#

#---------------------------------------------#
#-      Build Image Fetcher Application      -#
#---------------------------------------------#
add_subdirectory(image-fetcher)

